MOBILE-3814 menu: Fix badges overflow and resize menu to 56px on tablet

--- a/src/theme/theme.light.scss
+++ b/src/theme/theme.light.scss
@@ -117,6 +117,7 @@
     --core-bottom-tabs-badge-color: var(--brand);
     --core-bottom-tabs-badge-text-color: var(--brand-contrast);
     --bottom-tabs-size: 48px;
+    --side-tabs-size: 56px;
     ion-tab-bar.mainmenu-tabs {
         --background: var(--core-bottom-tabs-background);
         --color: var(--core-bottom-tabs-color);
